fixed styling on blog overview on mobile

--- a/src/client/components/blog.css
+++ b/src/client/components/blog.css
@@ -5,5 +5,7 @@
 }
 
 .blogItems {
-  width: 50vw;
+  max-width: 45rem;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
