--- a/src/client/components/blog/blog-item.css
+++ b/src/client/components/blog/blog-item.css
@@ -55,3 +55,7 @@
 .code {
   font-family: monospace;
 }
+
+.itemContainer {
+  padding: 0 2rem;
+}
